# video-sr-bokeh

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.github/workflows/: ci.yaml  codeql.yaml
data/bokeh/classical/: params.txt
data/depth/0000/tiff/: 000.tif  003.tif  007.tif  009.tif
data/depth/0001/tiff/: 002.tif  005.tif  006.tif  007.tif  008.tif  009.tif
data/depth/0002/tiff/: 000.tif  001.tif  002.tif  003.tif  006.tif
data/depth/0003/tiff/: 002.tif  003.tif  008.tif
data/depth_maps/0000/: 001.tif  002.tif  004.tif  005.tif  006.tif  008.tif
data/depth_maps/0001/: 000.tif  001.tif  003.tif  004.tif
data/depth_maps/0002/: 004.tif  005.tif  007.tif  008.tif  009.tif
data/depth_maps/0003/: 000.tif  001.tif  004.tif  005.tif  006.tif  007.tif  009.tif
src/data/: __init__.py  convert_depth.py  visualize_depth.py
tests/: test_smoke.py
