[project]
name = "video-sr-bokeh"
version = "0.1.0"
description = "A research and engineering project exploring high-quality video super-resolution combined with depth-aware synthetic bokeh. The pipeline enhances low-resolution video, estimates depth, and applies controllable blur to emulate DSLR-style shallow-focus footage. Includes modular components for SR models, depth prediction, temporal consistency, and real-time inference experiments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = true
default-groups = ["app", "dev", "ci"]

[dependency-groups]
ci = [
    "pre-commit>=4.5.0",
]

[tool.setuptools.packages]
find = {}

[tool.pycln]
all = true

[tool.isort]
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 'dynamic'
quote-style = 'double'
indent-style = 'space'
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ['D']
ignore = ['D100', 'D102', 'D103', 'D104', 'D105', 'D106', 'D107', 'D206', 'D300']
dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$'
exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.git-rewrite',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pytype',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'venv',
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.mypy]
ignore_missing_imports = true
install_types = true
no_strict_optional = true
explicit_package_bases = true
